--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "start": "craco start",
     "build": "craco build",
     "test": "craco test",
+    "server" : "nodemon src/server.mjs",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
