--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "start": "craco start",
     "build": "craco build",
     "test": "craco test",
-    "server" : "nodemon src/server.mjs",
+    "server" : "node src/server.mjs",
+    "dev" : "nodemon src/server.mjs",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
