--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,15 @@
 version: "3"
 services:
   app:
-    build: .
+   build:
     depends_on:
-      - db
-
+      -db
+    environment:
+      DATABASE_URL:
+        NODE_ENV: development
+        PORT: 5000
+      ports:
+        - "0.0.0.0 : 5000"
 
     db:
+
