--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,21 @@ services:
         PORT: 5000
       ports:
         - "0.0.0.0 : 5000"
+      command: npm run server
+      volumes:
+        - .:/app/
 
     db:
+      image: postgres:latest
+      ports:
+        - "45432:5432"
+      environment:
+        POSTGRES_USER: user
+        POSTGRES_PASSWORD: pass
+        POSTGRES_DB: stork_bank
+
+
+
+
+
 
