--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,20 +1,20 @@
 version: "3"
 services:
   app:
-   build:
+    build: .
     depends_on:
-      -db
+      - db
     environment:
       DATABASE_URL:
-        NODE_ENV: development
-        PORT: 5000
-      ports:
+      NODE_ENV: development
+      PORT: 8080
+    ports:
         - "0.0.0.0 : 5000"
-      command: npm run server
-      volumes:
-        - .:/app/
+    command: npm run server
+    volumes:
+      - .:/app/
 
-    db:
+  db:
       image: postgres:latest
       ports:
         - "45432:5432"
